@@ -17,12 +17,11 @@
  */
 package org.apache.hama.bsp;
 
-import org.apache.hadoop.conf.Configurable;
 
 /**
  * Interface BSP defines the basic operations needed to implement the BSP
  * algorithm.
  */
-public interface BSPInterface<K1, V1, K2, V2, M> extends Configurable {
+public interface BSPInterface<K1, V1, K2, V2, M> {
 
 }
